<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/settings">



        <CheckBoxPreference android:title="@string/autoread"
            android:key="autoread"
            android:defaultValue="true"
            />

        <CheckBoxPreference android:title="@string/dismisoriginal"
            android:key="dismissorignal"
            android:defaultValue="false"/>

        <CheckBoxPreference android:title="@string/playsound"
            android:key="playsound"
            android:defaultValue="true"/>

        <EditTextPreference
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:key="clearown"
            android:defaultValue="15"
            android:title="@string/clearown" />


</PreferenceScreen>